--- a/package.json
+++ b/package.json
@@ -16,6 +16,11 @@
     "@types/react": "18.0.22",
     "@types/react-dom": "18.0.7",
     "@vitejs/plugin-react": "2.2.0",
+    "eslint": "8.26.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "7.31.10",
+    "prettier": "^2.7.1",
     "vite": "3.2.0"
   }
 }
