--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prettier:check": "npx prettier . --check",
+    "prettier:fix": "npx prettier . --write"
   },
   "dependencies": {
     "axios": "^1.1.3",
@@ -14,8 +16,8 @@
     "react-dom": "18.2.0",
     "react-router-dom": "6.4.3",
     "react-router-hash-link": "2.4.3",
-    "sweetalert2": "^11.6.5",
-    "sweetalert2-react-content": "^5.0.7"
+    "sweetalert2": "11.6.5",
+    "sweetalert2-react-content": "5.0.7"
   },
   "devDependencies": {
     "@types/react": "18.0.22",
